// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductionPlansList Component should match snapshot while loading 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="px-4 mt-2 mb-4"
  >
    <div
      class="flex justify-between items-center mb-2"
    >
      <h2
        class="text-xl font-semibold text-[#e2e8f0]"
      >
        Production Plans
      </h2>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        New Plan
      </button>
    </div>
    <div
      data-testid="loading"
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`ProductionPlansList Component should match snapshot with empty plans 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="px-4 mt-2 mb-4"
  >
    <div
      class="flex justify-between items-center mb-2"
    >
      <h2
        class="text-xl font-semibold text-[#e2e8f0]"
      >
        Production Plans
      </h2>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        New Plan
      </button>
    </div>
    <div
      class="bg-[#12151f] rounded-sm border border-[rgba(148,163,184,0.1)] p-8 text-center"
    >
      <p
        class="text-[#64748b]"
      >
        No production plans yet. Create one to define how items should be produced.
      </p>
    </div>
  </div>
</div>
`;

exports[`ProductionPlansList Component should match snapshot with plans 1`] = `
<div>
  <div
    data-testid="navbar"
  >
    Navbar
  </div>
  <div
    class="px-4 mt-2 mb-4"
  >
    <div
      class="flex justify-between items-center mb-2"
    >
      <h2
        class="text-xl font-semibold text-[#e2e8f0]"
      >
        Production Plans
      </h2>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        New Plan
      </button>
    </div>
    <div
      class="overflow-x-auto rounded-sm border border-[rgba(148,163,184,0.1)]"
    >
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm"
        >
          <thead
            class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
          >
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors hover:bg-[rgba(0,212,255,0.04)] data-[state=selected]:bg-muted bg-[#0f1219]"
            >
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Product
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Plan Name
              </th>
              <th
                class="h-10 px-2 align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right"
              >
                Steps
              </th>
              <th
                class="h-10 px-2 text-left align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                Created
              </th>
              <th
                class="h-10 px-2 align-middle font-semibold text-[var(--color-primary-cyan)]/70 text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
              >
                Actions
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-[#12151f] hover:bg-[#1a1d2e] cursor-pointer"
            >
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <img
                    alt=""
                    class="rounded-sm"
                    height="24"
                    src="https://images.evetech.net/types/587/icon?size=32"
                    width="24"
                  />
                  <span
                    class="text-[#e2e8f0] text-sm"
                  >
                    Rifter
                  </span>
                </div>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#cbd5e1] text-sm"
              >
                Rifter Production
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-[#cbd5e1] text-sm"
              >
                1
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#64748b] text-[13px]"
              >
                2/22/2026
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
              >
                <button
                  aria-label="Edit"
                  class="p-1 rounded hover:bg-[rgba(0,212,255,0.1)] text-[#00d4ff]"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pencil h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                    />
                    <path
                      d="m15 5 4 4"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Delete"
                  class="p-1 rounded hover:bg-[rgba(239,68,68,0.1)] text-[#ef4444]"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
                    data-testid="DeleteIcon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </td>
            </tr>
            <tr
              class="border-b border-[var(--color-border-dim)] transition-colors data-[state=selected]:bg-muted bg-[#0f1219] hover:bg-[#1a1d2e] cursor-pointer"
            >
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <img
                    alt=""
                    class="rounded-sm"
                    height="24"
                    src="https://images.evetech.net/types/11379/icon?size=32"
                    width="24"
                  />
                  <span
                    class="text-[#e2e8f0] text-sm"
                  >
                    Muninn
                  </span>
                </div>
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#cbd5e1] text-sm"
              >
                Muninn Production
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-right text-[#cbd5e1] text-sm"
              >
                2
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-[#64748b] text-[13px]"
              >
                2/22/2026
              </td>
              <td
                class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-center"
              >
                <button
                  aria-label="Edit"
                  class="p-1 rounded hover:bg-[rgba(0,212,255,0.1)] text-[#00d4ff]"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pencil h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                    />
                    <path
                      d="m15 5 4 4"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Delete"
                  class="p-1 rounded hover:bg-[rgba(239,68,68,0.1)] text-[#ef4444]"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
                    data-testid="DeleteIcon"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 11v6"
                    />
                    <path
                      d="M14 11v6"
                    />
                    <path
                      d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                    />
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                    />
                  </svg>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
